# branchflow

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/branchflow-app/: Cargo.toml
crates/branchflow-cli/: Cargo.toml
crates/branchflow-cli/src/: main.rs
crates/branchflow-core/: Cargo.toml
crates/branchflow-core/src/: branch.rs  commit.rs  errors.rs  graph.rs  lib.rs  repository.rs  working_tree.rs
crates/branchflow-git/: Cargo.toml
crates/branchflow-git/src/: branches.rs  commits.rs  errors.rs  index.rs  lib.rs  operations.rs  references.rs  remote.rs  repository.rs  working_tree.rs
crates/branchflow-git/tests/: branches_tests.rs  commits_tests.rs  index_tests.rs  log_tests.rs  operations_tests.rs  references_tests.rs  remote_tests.rs  repository_tests.rs  working_tree_tests.rs
crates/branchflow-ui/: Cargo.toml
crates/branchflow-ui/src/: commands.rs  errors.rs  lib.rs  state.rs  view_models.rs
docs/: architecture.md  git-model.md  roadmap.md  vision.md
tests/integration/: log_tests.rs
