[package]
name = "branchflow-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Command line interface for BranchFlow"

[[bin]]
name = "branchflow"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }

# Application layer (CLI should talk to the app layer, not directly to core/git)
branchflow-app = { path = "../branchflow-app" }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Logging
log = { workspace = true }
env_logger = "0.11"