[package]
name = "branchflow-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core domain logic for BranchFlow"
repository = "https://github.com/your-org/branchflow"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"