[package]
name = "branchflow-git"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Git backend implementation for BranchFlow using libgit2"
repository = "https://github.com/your-org/branchflow"

[dependencies]
git2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

branchflow-core = { path = "../branchflow-core" }

[dev-dependencies]
pretty_assertions = "1"